semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser__failure__error_messages/bad2/error.txt
error: incorrect keys
  --> rules/syntax/bad2.yaml:2
2 |   - id: eqeq-is-bad
3 |     patterns:
4 |       - pattern-not: 1 == 1
5 |     message: "useless comparison operation `$X == $X` or `$X != $X`; possible bug?"
6 |     languages: [python]
7 |     severit: ERROR
  --> rules/syntax/bad2.yaml:7
7 |     severit: ERROR
  |     ^^^^^^^
= help: Unexpected keys {'severit'} found. Is one of these a typo of {'severity'}?
rules/syntax/bad2.yaml is missing required keys {'severity'}

run with --strict and there were 1 errors loading configs
